--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "jquery": "^3.7.0",
-    "reset-css": "^5.0.1"
+    "reset-css": "^5.0.1",
+    "swiper": "^9.4.1"
   }
 }
