--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "devDependencies": {
     "@babel/core": "^7.22.10",
     "@babel/preset-env": "^7.22.10",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-commonjs": "^25.0.4",
+    "@rollup/plugin-node-resolve": "^15.2.1",
+    "@rollup/stream": "^3.0.0",
     "browser-sync": "^2.29.3",
     "browsersync": "^0.0.1-security",
     "gulp": "^4.0.2",
@@ -25,7 +29,9 @@
     "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.2",
     "gulp-webp": "^4.0.1",
-    "sass": "^1.62.1"
+    "sass": "^1.62.1",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {
     "animate.css": "^4.1.1",
